--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,5 +3,6 @@
   "host": "localhost",
   "port": 27017,
   "database": "complexxapi",
+  "synchronize": true,
   "entities": ["src/entities/*.*"]
 }
